Introduce permissions for internal api keys